# ADR

./: .gitignore  .travis.yml  404.html  MANIFEST.in  README.md  example.py  index.html  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
ADR/: __init__.py  analyzer.py  main.py  my_own_parameters.py  optmizer.py  parameters.py  parameters_optmizer.py  who_you_gonna_call.py
ADR/Analysis/Aerodynamics/: AerodynamicPlots.py
ADR/Analysis/Performance/: Decolagem.py  Motor.py  Power.py  Takeoff.py  run_Power.py  run_Takeoff.py  test_Power.py  test_Takeoff.py
ADR/Analysis/Structures/: Spar.py
ADR/Analysis/Weight Estimative/: Aerodynamic_section_structure.py  Rib.py  Spar.py
ADR/Checkers/: Dimensions.py  Scoreboard.py  StaticMargin.py  TrimmRange.py
ADR/Checkers/tests/: test_Dimensions.py  test_Scoreboard.py  test_StaticMargin.py  test_TrimmRange.py
ADR/Components/: Component.py  Plane.py
ADR/Components/Aerodynamic_components/: Aerodynamic_section.py  Aerodynamic_surface.py  Airfoil.py  HS.py  VS.py  Wing.py
ADR/Components/Planes/: Plane.py
ADR/Components/Points/: CA.py  CG.py  TPR.py
ADR/Components/Propulsion/: Motor.py
ADR/Components/References/: Static_margin.py
ADR/Components/tests/: test_Component.py  test_Plane.py
ADR/Core/: data_manipulation.py  import_functions.py  insert_genes.py
ADR/Core/Optmizer/: opt_bounds.py  opt_config.py  opt_force.py
ADR/Methods/: FundamentalEquations.py
ADR/tests/: test_analyzer.py
Components/AttachedComponent/: index.html
Components/BaseComponent/: index.html
Components/FreeBody/: index.html
World/Ambient/: index.html
World/constants/: index.html
about/: index.html
adr/Components/: AttachedComponent.py  BaseComponent.py  FreeBody.py  __init__.py
adr/Methods/: __init__.py
adr/World/: Ambient.py  __init__.py  constants.py
adr/helper_functions/: __init__.py  algebric.py
docs/: about.md  index.md
docs/Components/: AttachedComponent.md  BaseComponent.md  FreeBody.md
docs/World/: Ambient.md  constants.md
docs/helper functions/: algebric.md
helper functions/algebric/: index.html
search/: search_index.json
tests/Components/: test_Aerodynamic.py  test_AerodynamicSurface.py  test_AttachedComponent.py  test_BaseComponent.py  test_FreeBody.py
tests/World/: test_Ambient.py  test_constants.py
tests/helper_functions/: test_algebric.py
(+109 files in other folders)
