[tool.poetry]
name = "adr.ca"
version = "2.0"
description = "ADR is a python library to analyse aircraft conceptual designs. ADR has several tools that allows one to create different aircraft designs and analyse those from different points os view."

packages = [
    { include = "adr", from = "" }
]

authors = ["Rafael Araujo Lehmkuhl <rafael.lehmkuhl93@gmail.com>"]
maintainers = ["Rafael Araujo Lehmkuhl <rafael.lehmkuhl93@gmail.com>", "João Gabriel Firta Foes <firtafoes@gmail.com>", "Cassiano Montibeller <cassianomonbeller@gmail.com>"]

license = "MIT"

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/CeuAzul/ADR"
homepage = "https://CeuAzul.github.io/ADR"

[tool.poetry.dependencies]
python = "^3.8"
vec = "^0.5"
scipy = "^1.5.2"
attrs = "^19.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
