[tool.poetry]
name = "adr.ca"
version = "1.0"
description = "ADR is a python library to analyse aircraft conceptual designs. ADR has several tools that allows one to create different aircraft designs and analyse those from different points os view."

packages = [
    { include = "ADR", from = "" }
]

authors = ["Rafael Araujo Lehmkuhl <rafael.lehmkuhl93@gmail.com>"]
maintainers = ["Rafael Araujo Lehmkuhl <rafael.lehmkuhl93@gmail.com>", "João Gabriel Firta Foes <firtafoes@gmail.com>", "Cassiano Montibeller <cassianomonbeller@gmail.com>"]

license = "MIT"

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/CeuAzul/ADR"
homepage = "https://CeuAzul.github.io/ADR"

[tool.poetry.dependencies]
python = "^3.7"
scipy = "^1.5.2"
avlwrapper = "^0.2.1"
numpy = "^1.19.1"
pandas = "^1.1.0"
matplotlib = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''
